добавил комментарии для css (проверить еще раз)

--- a/final/src/index.html
+++ b/final/src/index.html
@@ -376,7 +376,7 @@
                         <h3 class="subscriptions__items__h3">
                             1 месяц
                         </h3>
-                        <!-- так же я использовал отступы для некоторых тегов, чтобы отделить их друг от друга - использовал модификатор subscriptions_p... -->
+                        <!-- так же я использовал отступы для некоторых тегов, чтобы отделить их друг от друга - использовал модификатор subscriptions_m... -->
                         <p class="subscriptions__items__p subscriptions_p-50">
                             Тариф подойдёт тем, кто ведёт <br> краткосрочные проекты
                         </p>
@@ -390,7 +390,7 @@
                             </p>
                         </div>
                         <!-- разделительная линия между subscriptions__items__calculation -->
-                        <hr class="calculation__h3">
+                        <hr class="calculation__hr">
                         <div class="subscriptions__items__calculation">
                             <p class="subscriptions__items__calculation__p calculation_margin72px">
                                 Ваша выгода
@@ -399,7 +399,7 @@
                                 0 ₽
                             </p>
                         </div>
-                        <hr class="calculation__h3">
+                        <hr class="calculation__hr">
                         <div class="subscriptions__items__calculation calculation_last">
                             <p class="subscriptions__items__calculation__p
                             calculation_margin20px">
@@ -437,7 +437,7 @@
                                 8 940 ₽
                             </p>
                         </div>
-                        <hr class="calculation__h3__for-calculation_background">
+                        <hr class="calculation__hr__for-calculation_background">
                         <div class="subscriptions__items__calculation">
                             <p class="subscriptions__items__calculation__p calculation_margin55px">
                                 Ваша выгода
@@ -447,7 +447,7 @@
                                 3 000 ₽
                             </p>
                         </div>
-                        <hr class="calculation__h3">
+                        <hr class="calculation__hr">
                         <div class="subscriptions__items__calculation calculation_last">
                             <p class="subscriptions__items__calculation__p
                             calculation_margin19px">
@@ -483,7 +483,7 @@
                                 11 880 ₽
                             </p>
                         </div>
-                        <hr class="calculation__h3__for-calculation_background">
+                        <hr class="calculation__hr__for-calculation_background">
                         <div class="subscriptions__items__calculation">
                             <p class="subscriptions__items__calculation__p calculation_margin67px subscriptions_white">
                                 Ваша выгода
@@ -493,7 +493,8 @@
                                 12 000 ₽
                             </p>
                         </div>
-                        <hr class="calculation__h3">
+                        <!-- разделительная линия между subscriptions__items__calculation --> 
+                        <hr class="calculation__hr">
                         <div class="subscriptions__items__calculation calculation_white calculation_last">
                             <p class="subscriptions__items__calculation__p calculation_margin32px subscriptions_white">
                                 Стоимость месяца
