--- a/final/src/index.html
+++ b/final/src/index.html
@@ -49,18 +49,17 @@
                 </div>
                 <div class="main-section__finance-icons">
                     <img src="./icons/brands.png" alt="иконки брендов">
+                    
                 </div>
             </div>
             <!-- это правая часть среднего уровня, где картинка компьютера, и наложеный по - середине интерфейс к этой картинке -->
             <div class="main-section__right-finance right-finance">
-                <div class="main-section__computer-logo computer-logo">
-                    <img src="./img/computer-logo.png" alt="Основное лого компютера посередине сайта" class="computer-logo__outside">
-                    <!-- это кривой прямоугольник, проходящий под img (компьютера и интерфейса) -->
-                    <img src="./img/time-saving__index-0.png" alt="Информация внутри фото компьютера" class="computer-logo__inside">
-                    <div class="main-section__reg reg">
-                    </div>
-                </div>
+                <img src="./img/pc.png" alt="" class="right-finance__img">
             </div>
+        </div>
+        <div>
+            <img src="./img/Rectangle 126.png" alt=""
+            class="main-section__gt">
         </div>
     </section>
     <!-- вторая секция, где я делал колонки с помощью flex - про кассовые разрывы, отчеты о прибыли и т.д -->
@@ -177,9 +176,7 @@
             <div class="third-section__img time-saving__intermediate-level">
                 <img src="./img/time-saving__index-0.png" alt="Первое фото индекс 0" class="time-saving__intermediate-level__index-0">
                 <img src="./img/time-saving__index1.png" alt="Второе фото индекс 1" class="time-saving__intermediate-level__index-1">
-                <img src="./img/time-saving__icon.png" alt="Иконка посередине индекс 2" class="time-saving__intermediate-level__index-2">
-                <img src="./icons/time-saving__left.png" alt="Левая стрелка для иконки" class="time-saving__intermediate-level__icon-left-3">
-                <img src="./icons/time-saving__right.png" alt="Правая стрелка для иконки" class="time-saving__intermediate-level__icon-right-3">
+                <img src="./icons/Group 219.png" alt="Иконка посередине индекс 2" class="time-saving__intermediate-level__index-2">
             </div>
             <!-- footer третьей секции, где я делал flex сравнения Excel и FINIO -->
             <div class="third-section__flex comparison-with-excel">
