продолжаю вносить исправления

--- a/final/src/index.html
+++ b/final/src/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <!-- первая секция с навигационным меню по странице -->
-    <section class="main-section">
+    <header class="main-section">
         <div class="container main-section__header">
             <!-- лого компании слева от навигационного меню -->
             <div class="main_section__title-logo logo">
-                <img src="./img/finio.png" alt="Основное лого">
+                <a href="#"><img src="./img/finio.png" alt="лого FINIO для header" class="logo__header"></a>
             </div>
             <!-- само навигационное меню -->
             <nav class="main-section__nav navigation">
@@ -47,37 +47,37 @@
                         <a href="#">Попробовать 14 дней бесплатно</a>
                     </button>
                 </div>
-                <div class="main-section__finance-icons">
-                    <img src="./icons/brands.png" alt="иконки брендов">
+                <div class="main-section__finance-icons finance-icons">
+                    <img src="./icons/brands.png" alt="иконки брендов" class="finance-icons__logos">
                 </div>
             </div>
             <!-- это правая часть среднего уровня, где картинка компьютера, и наложеный по - середине интерфейс к этой картинке -->
             <div class="main-section__right-finance right-finance">
-                <img src="./img/pc.png" alt="" class="right-finance__img">
+                <img src="./img/pc.png" alt="большое лого компьютера в header" class="right-finance__img">
             </div>
         </div>
         <div class="main-section__reg reg">
         </div>
-    </section>
+    </header>
     <!-- вторая секция, где я делал колонки с помощью flex - про кассовые разрывы, отчеты о прибыли и т.д -->
     <section class="second-section">
         <!-- second-section__functions - этот див, как небольшое footer для первой секции -->
         <div class="container second-section__functions">
             <div class="functions__flex functions_backgraund">
                 <div class="functions__flex__one functions_items">
-                    <img src="./icons/graphics.png" alt="">
+                    <img src="./icons/graphics.png" alt="иконка анализа прибыли">
                     <p>
                         Анализ прибыли по <br> товарам и брендам
                     </p>
                 </div>
                 <div class="functions__flex__two functions_items">
-                    <img src="./icons/wb.png" alt="">
+                    <img src="./icons/wb.png" alt="иконка учета">
                     <p>
                         Автоматический учёт <br> доходов Wildberries
                     </p>
                 </div>
                 <div class="functions__flex__three functions_items">
-                    <img src="./icons/rub.png" alt="">
+                    <img src="./icons/rub.png" alt="иконка рубля">
                     <p>
                         От 990 рублей в месяц <br> с полным функционалом
                     </p>
@@ -90,10 +90,10 @@
             <div class="second-section__statistics cash-gaps">
                 <div class="cash-gaps__left">
                     <h3 class="cash-gaps__left__h3">
-                        Предотвращайте кассовые разрывы
+                        Предотвращайте <br> кассовые разрывы
                     </h3>
                     <p class="cash-gaps__left__p">
-                        Заранее планируйте предстоящие платежи и поступления средств. Тем самым, вы избежите неприятной ситуации с нехваткой средств на счетах
+                        Заранее планируйте предстоящие платежи и <br> поступления средств. Тем самым, вы избежите <br> неприятной ситуации с нехваткой средств на счетах
                     </p>                
                 </div>
                 <div class="cash-gaps__right">
@@ -112,7 +112,7 @@
                         Отчёты о прибыли и <br> убытках всегда под рукой
                     </h3>
                     <p class="reports__right__p">
-                        Получите полную информацию о состоянии вашего бизнеса, включающую все необходимые показатели для принятия правильных решений
+                        Получите полную информацию о состоянии вашего бизнеса, <br> включающую все необходимые показатели для принятия <br> правильных решений
                     </p>
                 </div>
             </div>
@@ -122,10 +122,10 @@
             <div class="second-section__statistics profit">
                 <div class="profit__left">
                     <h3 class="profit__left__h3">
-                        Какие товары приносят прибыль
+                        Какие товары приносят <br> прибыль
                     </h3>
                     <p class="profit__left__p">
-                        Находите точки роста, делайте упор на рентабельные товары и увеличивайте свой доход
+                        Находите точки роста, делайте упор на рентабельные <br> товары и увеличивайте свой доход
                     </p>
                 </div>
                 <div class="profit__right">
