--- a/final/src/index.html
+++ b/final/src/index.html
@@ -529,8 +529,9 @@
                     </p>
                 </div>
             </div>
-            <img src="./img/girl.png" alt="" class="eighth-section__img-index1">
-            <img src="./icons/click-left.png" alt="" class="eighth-section__img-index2">
+            <img src="./img/girl.png" alt="фото девушки отзыва" class="eighth-section__img-index1">
+            <img src="./icons/click-left.png" alt="иконка стрелочки влево" class="eighth-section__img-index2">
+            <img src="./icons/click-right.png" alt="иконка стрелочки вправо" class="eighth-section__img-index3">
         </div>
     </section>
     <!-- нижняя часть (footer) сайта, где есть переход по ресурсам на сайте (документация) -->
