--- a/final/src/index.html
+++ b/final/src/index.html
@@ -129,7 +129,7 @@
                     </p>
                 </div>
                 <div class="profit__right">
-                    <img src="./img/profit.png" alt="Какие товары приносят прибыль" class="profit-right__img">
+                    <img src="./img/profit.png" alt="Какие товары приносят прибыль" class="profit__right__img">
                 </div>
             </div>
             <!-- черта для разделения колонок -->
