сделал адаптив для первой группы

--- a/final/src/index.html
+++ b/final/src/index.html
@@ -172,8 +172,14 @@
             <!-- середина третьей секции, где идет накладывание фотографий друг на друга -->
             <div class="third-section__img time-saving__intermediate-level">
                 <img src="./img/time-saving__index-0.png" alt="Первое фото индекс 0" class="time-saving__intermediate-level__index-0">
-                <img src="./img/time-saving__index1.png" alt="" class="time-saving__intermediate-level__index-1">
-                <img src="./icons/index-2.png" alt="" class="time-saving__intermediate-level__index-2">
+                <div class="third-section__img time-saving__intermediate-level__dop">
+                    <img src="./img/time-saving__index1.png" alt="" class="time-saving__intermediate-level__dop__index-1">
+                </div>
+                <div class="third-section__img time-saving__intermediate-level__gop">
+                    <img src="./icons/index-2.png" alt="" class="time-saving__intermediate-level__gop__index-2">
+                </div>
+            </div>
+                
             </div>
             <!-- footer третьей секции, где я делал flex сравнения Excel и FINIO -->
             <div class="third-section__flex comparison-with-excel">
