адапатив день 1 после возвращения

--- a/final/src/index.html
+++ b/final/src/index.html
@@ -17,6 +17,11 @@
                 <a href="#"><img src="./img/finio.png" alt="лого FINIO для header" class="logo__header"></a>
             </div>
             <!-- само навигационное меню -->
+             <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+             </div>
             <nav class="main-section__nav navigation">
                 <ul class="navigation__ul">
                     <li><a href="#">Возможности</a></li>
@@ -602,5 +607,6 @@
             </div>
         </div>
     </section>
+<script src="js/script.js"></script>
 </body>
 </html>
