--- a/final/src/index.html
+++ b/final/src/index.html
@@ -538,10 +538,13 @@
                         Продавец Wildberries
                     </p>
                 </div>
+                <div class="reviews-main__imgs">
+                    <img src="./img/girl.png" alt="фото девушки отзыва" class="reviews-main__imgs-index1">
+                </div>
             </div>
-            <img src="./img/girl.png" alt="фото девушки отзыва" class="eighth-section__img-index1">
-            <img src="./icons/click-left.png" alt="иконка стрелочки влево" class="eighth-section__img-index2">
-            <img src="./icons/click-right.png" alt="иконка стрелочки вправо" class="eighth-section__img-index3">
+            <div class="eighth-section__container-left">
+                <img src="./icons/time-saving__left.png" alt="" class="eighth-section__container-left-1">
+            </div>
         </div>
     </section>
     <!-- нижняя часть (footer) сайта, где есть переход по ресурсам на сайте (документация) -->
