--- a/final/src/index.html
+++ b/final/src/index.html
@@ -541,9 +541,8 @@
                 <div class="reviews-main__imgs">
                     <img src="./img/girl.png" alt="фото девушки отзыва" class="reviews-main__imgs-index1">
                 </div>
-            </div>
-            <div class="eighth-section__container-left">
-                <img src="./icons/time-saving__left.png" alt="" class="eighth-section__container-left-1">
+                <img src="./icons/click-left.png" alt="стрелочка влево" class="eighth-section__imgs-index2">
+                <img src="./icons/click-right.png" alt="стрелочка вправо" class="eighth-section__imgs-index3">
             </div>
         </div>
     </section>
