--- a/final/src/index.html
+++ b/final/src/index.html
@@ -521,7 +521,27 @@
         </div>
     </section>
     <!-- восьмая секция, небольшой блок, где разместил отзыв клиентов -->
-    
+    <div class="reviews-header">
+        <h3 class="reviews-header__h3">
+            Отзывы
+        </h3>
+    </div>
+    <section class="reviews-container container">
+        <div class="reviews-container__left">
+            <p class="reviews-container__left__first">
+                Впервые за долгое время <br> увидела свои расходы и <br> доходы как на ладони.
+            </p>
+            <p class="reviews-container__left__name">
+                Дана Валеева
+            </p>
+            <p class="reviews-container__left__wb">
+                Продавец Wildberries
+            </p>
+        </div>
+        <div class="reviews-container__right">
+            <img src="./img/girl.png" alt="девушка, которая написала отзыв" class="reviews-container__right__img">
+        </div>
+    </section>
     <!-- нижняя часть (footer) сайта, где есть переход по ресурсам на сайте (документация) -->
     <section class="footer">
         <div class="container footer__container">
